# external_projects

./: CMakeLists.txt
src/: myapp.cpp
